tests/fixtures/positive/coroutines/MutableStateInObject.kt
package test

object Counter {
    var total = 0
}
