tests/fixtures/negative/coroutines/MutableStateInObject.kt
package test

import java.util.concurrent.atomic.AtomicInteger

object Counter {
    private val total = AtomicInteger(0)
}
